# byeGPT

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  skill.json  todo.md
.byegpt/index/: chroma.sqlite3
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: auth_manager.py  cloud.py  jobs.py  main.py  parser.py  storage.py  topics.py
core/: __init__.py  converter.py  persona.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tus-js-client.README.md  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArtifactGallery.tsx  ChatGallery.tsx  IngestionDropzone.tsx  MindMap.tsx  NotebookChatPanel.tsx  PassportCard.tsx  SearchPanel.tsx  StudioControls.tsx  TopicLaboratory.tsx
frontend/src/hooks/: useNotebook.ts
scripts/: capture_chrome_session.ps1  capture_chrome_session.py  run_host_backend.py  start_chrome_debug.ps1  start_host_backend.cmd  start_host_backend.ps1  start_host_backend.sh
src/byegpt/: __init__.py  __main__.py  cli.py  formatter.py  indexer.py  parser.py  persona.py  taxonomy.py
test_chroma_minimal/: chroma.sqlite3
tests/: conftest.py  test_backend_api.py  test_cli.py  test_formatter.py  test_parser.py
tests/fixtures/: sample_conversations.json
